<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleTweet</string>
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="what_s_happening" />
    <string name="What_s_happening" />
    <string name="tweet" />
    <string name="timestamp">timestamp</string>
    <string name="name">Name</string>
    <string name="this_is_my_tweet">This is my tweet.</string>
    <string name="username">username</string>
    <string name="Tweet" />
    <string name="_280">/ 280</string>
    <string name="_0">0</string>

</resources>